Fixes jumping issue with the movie poll placeholder templates.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -634,6 +634,7 @@ $poster-base-unit: min(95vw, 472px);
 .justwatch-credit {
   margin: 15px 0;
   font-size: 0.8em;
+  font-family: "Product Sans";
 }
 
 .watch-provider-image {
@@ -644,8 +645,9 @@ $poster-base-unit: min(95vw, 472px);
 }
 
 .not-available {
-  font-size: 0.8em;
+  font-size: 0.9em;
   margin: 16px 0;
+  font-family: "Product Sans";
 }
 
 h1.title {
